fix: media upload returns public URL (Meta-accessible)